# jni-invocation

./: .gitignore  CMakeLists.txt  Demo.java  main.cpp  main.hpp
